Fixes wrapping in code blocks

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -54,7 +54,7 @@ hr {
 mark { background: #FF0; color: #000; }
 code, kbd, pre,
 samp { font-family: monospace, serif; font-size: 1em; }
-pre { white-space: pre-wrap; }
+pre { white-space: pre; }
 q { quotes: "\201C" "\201D" "\2018" "\2019"; }
 small { font-size: 80%; }
 sub, sup {
@@ -340,7 +340,7 @@ code, tt {
     padding: 1px 3px;
     font-family: Consolas, "Inconsolata", "Courier New", Courier, monospace;
     font-size: 12px;
-    white-space: pre-wrap;
+    white-space: pre;
     border: #E3EDF3 1px solid;
     background: #F7FAFB;
     border-radius: 2px;
@@ -356,8 +356,8 @@ pre {
     margin-bottom: 30px;
     white-space: pre;
     overflow-x: auto;
-    word-break: inherit;
-    word-wrap: inherit;
+    word-break: normal;
+    word-wrap: normal;
 }
 
 pre a::before {
@@ -395,7 +395,7 @@ pre a:only-of-type::before {
 
 pre code, pre tt {
     font-size: 12px;
-    white-space: pre-wrap;
+    white-space: pre;
     background: transparent;
     border: none;
     padding: 0;
